fix .container3 3 && fix gaps

--- a/styles.css
+++ b/styles.css
@@ -47,14 +47,14 @@ main .recuerdos {
     background-color: #ffff;
 
     display: grid;
+    grid-gap: 0.5rem;
     grid-template-columns: repeat(2, 1fr);
     max-width: 100%;
     overflow-x: hidden;
 }
 main .recuerdos div {
-    margin: 0 0.5rem 0 0.5rem;
-
-    align-content: center;
+    display: flex;
+    justify-content: center;
     text-align: center;
 }
 
@@ -66,14 +66,13 @@ main .recuerdos div {
 }
 .container3 {
     grid-column: 2/3;
-    margin-right: 0.5rem;
-    margin-left: 0.5rem;
+    
 }
 
 
 img {
     width: 90%;
-    background-color: #020122;
-    padding: 1rem;
     border-radius: 1rem;
+    background-color: #020122;
+    padding: 10px;
 }
